Remove GENIENLP_DATABASE_DIR default

--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 GENIENLP_EMBEDDINGS ?= ../genienlp/.embeddings
-GENIENLP_DATABASE_DIR ?= ../genienlp/dataset/database_dir
+GENIENLP_DATABASE_DIR ?=
 geniedir ?= ../genie-toolkit
 geniek8s ?= ../genie-k8s
 genienlp ?= $(shell which genienlp)
